# CraftLink

./: .bumpversion.cfg  .env.template  .gitignore  Dockerfile-bedrock  Dockerfile-java  README.md  docker-compose.yml  pyproject.toml
src/craftlink/: bot.py  command.py  console.py  constants.py
